# rabbit_worker

./: .dockerignore  Dockerfile_receiver  Dockerfile_sender  Dockerfile_worker  README.md  docker-compose.yml  entrypoint_worker.sh  pyproject.toml
nginx/conf.d/: nginx.conf
src/: broker.py  config.py  receiver.py  sender.py  worker.py
