[tool.poetry]
name = "tim"
version = "0.1.0"
description = ""
authors = ["Rasul Cheerchiev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.100.0"}
aio-pika = "^9.1.4"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
